@@ -1,20 +1,27 @@
 package com.narara.superboard.board.service;
 
+import com.narara.superboard.board.document.BoardHistory;
 import com.narara.superboard.board.entity.Board;
 import com.narara.superboard.board.exception.BoardNotFoundException;
+import com.narara.superboard.board.infrastructure.BoardHistoryRepository;
 import com.narara.superboard.board.infrastructure.BoardRepository;
 import com.narara.superboard.board.infrastructure.BoardSearchRepository;
 import com.narara.superboard.board.interfaces.dto.*;
+import com.narara.superboard.board.interfaces.dto.log.ArchiveStatusChangeInfo;
+import com.narara.superboard.board.interfaces.dto.log.CreateBoardInfo;
+import com.narara.superboard.board.interfaces.dto.log.DeleteBoardInfo;
+import com.narara.superboard.board.interfaces.dto.log.UpdateBoardInfo;
 import com.narara.superboard.board.service.validator.BoardValidator;
 import com.narara.superboard.boardmember.entity.BoardMember;
 import com.narara.superboard.boardmember.infrastructure.BoardMemberRepository;
-import com.narara.superboard.card.infrastructure.CardRepository;
 import com.narara.superboard.common.application.handler.CoverHandler;
 import com.narara.superboard.common.application.validator.CoverValidator;
-import com.narara.superboard.common.application.validator.NameValidator;
 import com.narara.superboard.common.constant.enums.Authority;
+import com.narara.superboard.common.constant.enums.EventData;
+import com.narara.superboard.common.constant.enums.EventType;
+import com.narara.superboard.common.document.AdditionalDetails;
+import com.narara.superboard.common.document.Target;
 import com.narara.superboard.common.exception.NotFoundEntityException;
-import com.narara.superboard.list.infrastructure.ListRepository;
 import com.narara.superboard.common.exception.authority.UnauthorizedException;
 import com.narara.superboard.member.entity.Member;
 import com.narara.superboard.member.exception.MemberNotFoundException;
@@ -35,7 +42,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -45,27 +51,25 @@ public class BoardServiceImpl implements BoardService {
     private final BoardRepository boardRepository;
     private final WorkSpaceRepository workspaceRepository;
     private final BoardMemberRepository boardMemberRepository;
+    private final BoardHistoryRepository boardHistoryRepository;
 //    private final WorkspaceOffsetService workspaceOffsetService;
 
     private final BoardValidator boardValidator;
     private final CoverValidator coverValidator;
-    private final NameValidator nameValidator;
 
     private final CoverHandler coverHandler;
     private final MemberRepository memberRepository;
 
-    private final ListRepository listRepository;
     private final ReplyRepository replyRepository;
-    private final CardRepository cardRepository;
     private final BoardSearchRepository boardSearchRepository;
 
     @Override
     public List<BoardDetailResponseDto> getBoardCollectionResponseDto(Long workSpaceId) {
-        List<Board> BoardList = boardRepository.findAllByWorkSpaceId(workSpaceId);
+        List<Board> boardList = boardRepository.findAllByWorkSpaceId(workSpaceId);
 
         List<BoardDetailResponseDto> boardDetailResponseDtoList = new ArrayList<>();
 
-        for (Board board : BoardList) {
+        for (Board board : boardList) {
             BoardDetailResponseDto boardDto = BoardDetailResponseDto.builder()
                     .id(board.getId())
                     .name(board.getName())
@@ -102,6 +106,16 @@ public class BoardServiceImpl implements BoardService {
         board.getWorkSpace().addOffset(); //workspace offset++
 //        workspaceOffsetService.saveAddBoardDiff(board);
 
+        // Board 생성 로그 기록
+        CreateBoardInfo createBoardInfo = new CreateBoardInfo(board.getName(), workSpace.getName());
+        Target target = Target.of(board, createBoardInfo);
+
+        BoardHistory boardHistory = BoardHistory.createBoardHistory(
+                member, System.currentTimeMillis(), board, EventType.CREATE, EventData.BOARD, target);
+
+        boardHistoryRepository.save(boardHistory);
+
+
         return saveBoard;
     }
 
@@ -112,13 +126,23 @@ public class BoardServiceImpl implements BoardService {
     }
 
     @Override
-    public void deleteBoard(Long boardId) {
+    public void deleteBoard(Member member, Long boardId) {
         Board board = getBoard(boardId);
         board.deleted();
 
         //보드 삭제(닫기)의 경우, workspace 구독 시 정보를 받을 수 있다
         board.getWorkSpace().addOffset();
 //        workspaceOffsetService.saveDeleteBoardDiff(board);
+
+        // Board 삭제 로그 기록
+        DeleteBoardInfo deleteBoardInfo = new DeleteBoardInfo(board.getName(), board.getWorkSpace().getName());
+        Target target = Target.of(board, deleteBoardInfo);
+
+        BoardHistory boardHistory = BoardHistory.createBoardHistory(
+                member, System.currentTimeMillis(), board, EventType.DELETE, EventData.BOARD, target);
+
+        boardHistoryRepository.save(boardHistory);
+
     }
 
     @Override
@@ -133,21 +157,31 @@ public class BoardServiceImpl implements BoardService {
 
         BoardMember boardMember = boardMemberRepository.findFirstByBoard_IdAndMember_Id(boardId, memberId)
                 .orElseThrow(() -> new AccessDeniedException("보드에 대한 권한이 없습니다"));
-
+        if (boardMember.getAuthority() == null){
+            throw  new AccessDeniedException("보드에 대한 권한이 없습니다");
+        }
         Board board = getBoard(boardId);
+        Board updatedBoard;
 
-        // 권한 검사를 할 때 Authority가 null인 경우 AccessDeniedException을 던지도록 추가
-        if (boardMember.getAuthority() == null) {
+        if (boardMember.getAuthority().equals(Authority.MEMBER)) {
+            updatedBoard = board.updateBoardByMember(boardUpdateRequestDto);
+        } else if (boardMember.getAuthority().equals(Authority.ADMIN)) {
+            updatedBoard = board.updateBoardByAdmin(boardUpdateRequestDto);
+        } else {
             throw new AccessDeniedException("보드에 대한 권한이 잘못되었습니다.");
         }
 
-        if (boardMember.getAuthority().equals(Authority.MEMBER)) {
-            return board.updateBoardByMember(boardUpdateRequestDto);
-        } else if (boardMember.getAuthority().equals(Authority.ADMIN)) {
-            return board.updateBoardByAdmin(boardUpdateRequestDto);
-        }
+        // Board 업데이트 로그 기록
+        UpdateBoardInfo updateBoardInfo = new UpdateBoardInfo(updatedBoard.getName(), updatedBoard.getWorkSpace().getName());
+        Target target = Target.of(updatedBoard, updateBoardInfo);
 
-        throw new AccessDeniedException("보드에 대한 권한이 잘못되었습니다.");
+        BoardHistory boardHistory = BoardHistory.createBoardHistory(
+                memberRepository.findById(memberId).orElseThrow(), System.currentTimeMillis(),
+                updatedBoard, EventType.UPDATE, EventData.BOARD, target);
+
+        boardHistoryRepository.save(boardHistory);
+
+        return updatedBoard;
     }
 
     // 아카이브된 보드 리스트 조회
@@ -158,9 +192,18 @@ public class BoardServiceImpl implements BoardService {
 
     // 보드 아카이브 상태 변경
     @Override
-    public void changeArchiveStatus(Long boardId) {
+    public void changeArchiveStatus(Member member, Long boardId) {
         Board board = getBoard(boardId);
         board.changeArchiveStatus();
+
+        // 아카이브 상태 변경 로그 기록
+        ArchiveStatusChangeInfo archiveStatusChangeInfo = new ArchiveStatusChangeInfo(board.getName(), board.getIsArchived());
+        Target target = Target.of(board, archiveStatusChangeInfo);
+
+        BoardHistory boardHistory = BoardHistory.createBoardHistory(
+                member, System.currentTimeMillis(), board, EventType.CLOSE, EventData.BOARD, target);
+
+        boardHistoryRepository.save(boardHistory);
     }
 
     @Override
@@ -194,8 +237,9 @@ public class BoardServiceImpl implements BoardService {
     public PageBoardReplyResponseDto getRepliesByBoardId(Long boardId, Pageable pageable) {
 
         // 보드가 존재하는지 검증
-        boardRepository.findById(boardId)
-                .orElseThrow(() -> new BoardNotFoundException(boardId));
+        if (!boardRepository.existsById(boardId)) {
+            throw new BoardNotFoundException(boardId);
+        }
 
         // 페이징된 댓글을 가져옴
         Page<Reply> replyPage = replyRepository.findAllByBoardId(boardId, pageable);
@@ -203,7 +247,7 @@ public class BoardServiceImpl implements BoardService {
         // Reply 엔티티를 BoardReplyCollectionResponseDto로 변환
         List<BoardReplyCollectionResponseDto> dtoList = replyPage.getContent().stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
 
         // PageBoardReplyResponseDto에 변환한 DTO 리스트와 페이징 정보를 담아 반환
         return new PageBoardReplyResponseDto(dtoList, replyPage.getTotalPages(), replyPage.getTotalElements());
@@ -224,4 +268,8 @@ public class BoardServiceImpl implements BoardService {
                 reply.getCard().getList().getName()
         );
     }
+
+
+
+
 }
